# pepeclaw

./: .gitignore  README.md  cli.py  config.py  main.py  pyproject.toml
agents/coding_agents/: calculator_agent.py  coding_agent.py  docker_agent.py  file_agent.py  filegen_agent.py  github_agent.py  learning_agent.py  python_agent.py  reasoning_agent.py  shell_agent.py
agents/mcp-agents/: agno-mcp-agents.py  expo-mcp-agents.py
agents/mcp_agents/: agno_mcp_agents.py  clerk_mcp_agents.py  convex_auth_mcp_agents.py  convex_mcp_agents.py  expo_mcp_agents.py  livekit_mcp_agents.py  stripe_mcp_agents.py  svelte_mcp_agents.py
teams/: code_team.py  deploy_team.py  dev_team.py  docs_team.py  fullstack_team.py  payments_team.py  research_team.py
tools/: __init__.py  dynamic_auth.py  oauth_auth.py  static_auth.py
tools/auth/: __init__.py  dynamic.py  oauth.py  static.py
