[project]
name = "pepeclaw"
version = "0.1.0"
description = "Multi-agent system powered by Agno and MCP."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "agno[os]>=2.5.9",
    "aiohttp>=3.13.3",
    "anthropic>=0.84.0",
    "google-cloud-aiplatform>=1.141.0",
    "google-genai>=1.67.0",
    "mcp>=1.26.0",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "reportlab>=4.4.10",
]

[project.scripts]
pepeclaw = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "teams", "tools", "."]
